Modified Git Ignore and stremalit css

--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,4 @@ override.tf.json
 terraform.rc
 
 # End of https://www.toptal.com/developers/gitignore/api/python,dotnetcore,terraform
+sample/**
